[gd_scene load_steps=8 format=3 uid="uid://dk1tya2d1cqwm"]

[ext_resource type="Script" path="res://Jogador/attacks/thunder.gd" id="1_mdv2v"]
[ext_resource type="Texture2D" uid="uid://dqojeeohhvgjm" path="res://Texturas/Items/Weapons/lightningAttack.png" id="2_2fihn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfxbc"]
size = Vector2(50, 60.0001)

[sub_resource type="Animation" id="Animation_58k7o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_sr26k"]
resource_name = "attackAnim"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(6, 0), Vector2i(1, 0), Vector2i(5, 0), Vector2i(4, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_xcspj"]
resource_name = "standAnim"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(4, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_amvmg"]
_data = {
"RESET": SubResource("Animation_58k7o"),
"attackAnim": SubResource("Animation_sr26k"),
"standAnim": SubResource("Animation_xcspj")
}

[node name="thunder" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_mdv2v")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_2fihn")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, -2)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_vfxbc")

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
autostart = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_amvmg")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
